# shears

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  release.yaml
docs/: api.md  conf.py  contributing.md  developer_docs.md  index.md  template_usage.md
docs/_templates/autosummary/: class.rst
docs/notebooks/: example.ipynb  tutorial.ipynb
notebooks/: exporatory.py
src/shears/: __init__.py  _util.py
src/shears/datasets/: __init__.py
src/shears/pp/: __init__.py
src/shears/tl/: __init__.py
tests/: test_basic.py
